Fix center alignment for flex items in banner

--- a/source/patterns/components/banner/banner.scss
+++ b/source/patterns/components/banner/banner.scss
@@ -24,6 +24,7 @@
       border: none;
       display: flex;
       align-items: center;
+      justify-content: center;
       padding: var(--cu-vr1) var(--cu-ps2);
       margin: 0;
     }
@@ -38,6 +39,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
       padding: var(--cu-vr1) var(--cu-ps2);
     }
   }
